fix: remove horizontal scroll

--- a/graphiql-app/src/components/RestClient/KeyValueEditor.module.scss
+++ b/graphiql-app/src/components/RestClient/KeyValueEditor.module.scss
@@ -79,9 +79,6 @@
   input[type="checkbox"] {
     opacity: 0;
     position: absolute;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
     margin: 0;
     pointer-events: none;
   }
@@ -95,6 +92,7 @@
     border-radius: 4px;
     position: relative;
     box-sizing: border-box;
+    cursor: pointer;
     transition:
       background-color 0.3s,
       border-color 0.3s;
