--- a/graphiql-app/src/components/RestClient/RequestHandler.module.scss
+++ b/graphiql-app/src/components/RestClient/RequestHandler.module.scss
@@ -55,3 +55,9 @@
     }
   }
 }
+
+.icon {
+  margin-right: 8px;
+  width: 20px;
+  height: 20px;
+}
